# Protein-inspired-3D-Diffusion

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: 3D_diffusion.ipynb
src/: __init__.py  chains.py  dataset.py  ddpo.py  diffusion.py  evaluation.py  geometry.py  models.py  rewards.py  sampling.py  training.py  utils.py  visualization.py
tests/: test_all.py
